--- a/codecademy/tea-cozy/style.css
+++ b/codecademy/tea-cozy/style.css
@@ -1,3 +1,11 @@
+* {
+    font-family: Helvetica;
+    font-size: 22px;
+    color: seashell;
+    background-color: black;
+    opacity: 0.9;
+}
+
 .header {
     position: fixed;
     top: 0;
@@ -10,6 +18,7 @@
     gap: 12px;
     height: 69px;
     border-bottom: 1px solid seashell;
+    z-index: 10;
 }
 
 .cursive {
@@ -17,9 +26,114 @@
     font-size: 22px;
     padding: 10px;
     height: 50px;
+    text-align: right;
 }
 
 .sections p {
     display: inline-block;
     margin: 0 10px;
+    text-decoration: underline;
+}
+
+.img-mission-background {
+    position: relative;
+    width: 100%;
+    height: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 69px;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.img-mission-background img {
+    width: 1200px;
+    height: 700px;
+    object-fit: cover;
+}
+
+.mission-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    text-align: center;
+    color: white
+}
+
+.mission-text h2,
+.mission-text h4 {
+    margin: 20px;
+}
+
+h2 { font-size: 1.5em; }
+
+h4 { font-size: 1.17em; }
+
+.tea-images {
+    margin: 50px auto;
+    width: 1000px;
+    text-align: center;
+}
+
+.tea-images img {
+    display: inline-block;
+    width: 300px;
+    height: 200px;
+}
+
+.tea-item {
+    display: inline-block;
+    margin: 0;
+    text-align: center;
+}
+
+.header-margin {
+    margin-top: 10px;
+}
+
+.location-container {
+    text-align: center;
+    background-color: transparent;
+}
+
+.location-blocks {
+    display: inline-block;
+    margin-right: 40px;
+    background-color: black;
+    width: 300px;
+    padding: 20px;
+    opacity: 1;
+}
+
+.location-blocks h3, .location-blocks p {
+    background-color: transparent;
+}
+
+.background-img {
+    background-image: url("./assests/images/img-locations-background.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 1200px;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    margin: 0 auto;
+}
+
+.contact {
+    text-align: center;
+    margin: 50px auto;
+}
+
+.footer {
+    text-align: left;
 }
