tea cozy site draft 1.0

--- a/codecademy/tea-cozy/style.css
+++ b/codecademy/tea-cozy/style.css
@@ -127,6 +127,7 @@ h4 { font-size: 1.17em; }
     align-items: center;
     background-color: transparent;
     margin: 0 auto;
+    opacity: 1;
 }
 
 .contact {
